# r19ana

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  esp_idf_project_configuration.json  sdkconfig.defaults
.github/workflows/: deploy.yml
bt_classic/: spp_acceptor.hh
bt_classic/esp32/: spp.cc  spp2.cc  spp_task.cc  spp_task.hh
bt_classic/host/: mock.cc
components/app/: CMakeLists.txt  Kconfig
components/app/app_cli/: cli.cc  cli_imp.h  obj_json.cc  parm_cmd.cc  parm_config.cc  parm_config.h  parm_config_app.cc  parm_config_comp.cc  parm_config_help.cc  parm_help.cc  parm_kvs.cc  parm_mcu.cc  parm_proto_buf.cc  parm_status.cc
components/app/app_cli/include/app_cli/: cli_app.hh  cli_config.h
components/app/app_http_server/: web_content.cc
components/app/app_http_server/esp32/: uri_handlers.cc
components/app/app_main/: app_private.h
components/app/app_main/esp32/: main.cc  main.h  main_loop.cc  main_loop_periodic.cc  main_setup.cc
components/app/app_misc/: rtc.cc
components/app/app_net/esp32/: gw_ping.cc
components/app/app_settings/: app_settings.cc  config_comps.cc
components/app/app_settings/include/app_settings/: app_settings.hh  config.h  config_defaults.h
components/app/app_uout/: so_write_config.cc  so_write_msg.cc
components/app/app_uout/include/app_uout/: so_config.h
components/app/test/: CMakeLists.txt  test_full_auto_json.cc  test_full_auto_uo_json.cc
components/app_config/: Kconfig.projbuild
components/app_config/include/app_config/: options.hh  proj_app_cfg.h  proj_app_cfg.hh
components/webapp/: CMakeLists.txt  Makefile  proxy.js  rules.mk  wapp_dev.html
components/webapp/njs/: eslint.config.js  index.html  package-lock.json  package.json  svelte.config.mjs  tsconfig.json  vite.config.js  vite.config.mjs  wapp.html
components/webapp/njs/src/: download.ts  main.js  rel.sed
components/webapp/njs/src/app/: fetch.js  http_resp.js  layout.svelte  layout_tailwind.svelte  main.svelte  mcu_config.svelte  mcu_firmware_info.svelte  mcu_firmware_upd.svelte  nav_tabs.svelte  wapp.svelte
components/webapp/njs/src/cardiag/: byte_unstuffing.js  byte_unstuffing.test.ts  byte_unstuffing.ts  renix_destuffer.ts
components/webapp/njs/src/cardiag/charts/: iface.ts  raw.js  raw.svelte.ts  raw.ts  x53b-740.js  x53b-740.svelte.ts  x53b-740.ts
components/webapp/njs/src/cardiag/models/: x53b-740.js
components/webapp/njs/src/cardiag/parser/: raw.js  raw.ts  x53b-740.js  x53b-740.ts
components/webapp/njs/src/components/: drop-file.svelte  edit_name.svelte  request-or-drop-file.svelte
components/webapp/njs/src/components/mcu_config/: enable.svelte  gpio.svelte  gpio_select.svelte  lan_phy.svelte  network.svelte  number.svelte
components/webapp/njs/src/panes/: diag_charts.svelte  firmware_esp32.svelte  firmware_stm32.svelte  full_auto.svelte  mcu_settings.svelte  plot_status_bits.svelte  plot_test.svelte  rv_control.svelte  zone_maintenance.svelte  zone_timers.svelte
components/webapp/njs/src/plotting/uplot/: zoom_plugin.ts
components/webapp/njs/src/sample_data/: github_samples.ts
components/webapp/njs/src/store/: app_state.js  diag-data.js  mcu_firmware.js
components/webapp/njs/src/styles/: app.scss  tailwind.css
components/webapp/tools/: bin_2_c.py  file_2_c.py
configs/esp32-debug/: sdkconfig.defaults
configs/esp32-release/: sdkconfig.defaults
main/: BleTransport.hh  CMakeLists.txt  CMakePresets.json  DataLogFile.hh  DataLogFileStdio.hh  FrameProcessor.cc  FrameProcessor.hh  IFileLogger.hh  IMountable.hh  Kconfig.projbuild  PrintCarDiag.hh  PrintDiagX53b740.hh  R19Frame.cc  R19Frame.hh  R19Frame_utils.hh  Ringbuffer.hh  Transport.hh  UsbTransport.hh  X53B_740_frame.cc  X53B_740_frame_utils.hh  XR25Frame.cc  XR25Frame.hh  cli.cc  cli.hh  i18n.cc  i18n.hh  main.cc  main.hh  model_table.hh  pers_storage.hh  renix_destuffer.hh  select_model.cc  select_model.hh
main/esp32/: DataLogFile.cc  SppTransport.hh  UartTransport.cc  UartTransport.hh  bt.cc  main.cc  pers_storage.cc
main/gp/: exp-8-allbits.gp  exp-8-allflags_allbits.gp  exp-y2.gp  x53b-1.gp  x53b-2.gp  x53b-3.gp  x53b-all.gp
main/host/: ConsoleTransport.hh  DataLogFile.cc  UartTransport.hh  Xr25Transport.hh  hex2voc.hh  main.cc  main_test.cc  pers_storage.cc  xr25-bin2human.cc  xr25-hex2bin.cc  xr25-hex2human.cc
main/models/: model_table.cc  settings.hh
main/models/exp/: PrintDiag.cc  PrintDiag.hh  frame.hh  packet_parser.hh
main/models/raw/: PrintDiag.cc  PrintDiag.hh  PrintDiagRaw.cc  PrintDiagRaw.hh  frame.hh  packet_parser.hh
main/models/x53b_740/: PrintDiag.cc  PrintDiag.hh  PrintDiagX53b740.cc  PrintDiagX53b740.hh  X53B_740_frame.hh  X53B_740_frame_utils.hh  frame.hh  packet_parser.hh
main/test/: CMakeLists.txt  test_destuffing.cc
main/trash/: messages.pot
main/trash/java/: MainActivity.java  R19Frame.java  XR25Frame.java
